test/types/tuple/homog/boolTupleSize-nonparam.good
boolTupleSize-nonparam.chpl:4: error: Tuple types cannot be defined using boolean sizes
