test/types/tuple/homog/boolTupleSize-nonparam.chpl
var b = true;
writeln(b.type:string);

var t: b*int;
writeln(t.type:string);
writeln(t);
